--- a/scala-sparo_예시.ipynb
+++ b/scala-sparo_예시.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "832537ac",
+   "metadata": {},
+   "source": [
+    "## 설치\n",
+    "\n",
+    "https://www.techentice.com/how-to-setup-jupyter-notebook-to-run-scala-and-spark/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "15fc0cd6",
+   "id": "c55bdaec",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b90bc6e0",
+   "id": "358f9a98",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d68810ae",
+   "id": "f7ee0eb2",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +122,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f069a9e",
+   "id": "efac00a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7b5ace3",
    "metadata": {},
    "outputs": [],
    "source": []
