--- a/scala-sparo_예시.ipynb
+++ b/scala-sparo_예시.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "832537ac",
+   "id": "ca4baa12",
    "metadata": {},
    "source": [
     "## 설치\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c55bdaec",
+   "id": "810f55bd",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "358f9a98",
+   "id": "961b7944",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7ee0eb2",
+   "id": "0d8719ce",
    "metadata": {},
    "outputs": [
     {
@@ -121,16 +121,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efac00a0",
+   "execution_count": 6,
+   "id": "43d7edf4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "org.apache.spark.sql.AnalysisException",
+     "evalue": " Path does not exist: file:/Users/dahlmoon/Documents/GitHub/data/x.xgv;",
+     "output_type": "error",
+     "traceback": [
+      "org.apache.spark.sql.AnalysisException: Path does not exist: file:/Users/dahlmoon/Documents/GitHub/data/x.xgv;",
+      "  at org.apache.spark.sql.execution.datasources.DataSource$.$anonfun$checkAndGlobPathIfNecessary$1(DataSource.scala:759)",
+      "  at scala.collection.TraversableLike.$anonfun$flatMap$1(TraversableLike.scala:245)",
+      "  at scala.collection.immutable.List.foreach(List.scala:392)",
+      "  at scala.collection.TraversableLike.flatMap(TraversableLike.scala:245)",
+      "  at scala.collection.TraversableLike.flatMap$(TraversableLike.scala:242)",
+      "  at scala.collection.immutable.List.flatMap(List.scala:355)",
+      "  at org.apache.spark.sql.execution.datasources.DataSource$.checkAndGlobPathIfNecessary(DataSource.scala:746)",
+      "  at org.apache.spark.sql.execution.datasources.DataSource.checkAndGlobPathIfNecessary(DataSource.scala:575)",
+      "  at org.apache.spark.sql.execution.datasources.DataSource.resolveRelation(DataSource.scala:398)",
+      "  at org.apache.spark.sql.DataFrameReader.loadV1Source(DataFrameReader.scala:279)",
+      "  at org.apache.spark.sql.DataFrameReader.$anonfun$load$2(DataFrameReader.scala:268)",
+      "  at scala.Option.getOrElse(Option.scala:189)",
+      "  at org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:268)",
+      "  at org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:214)",
+      "  ... 37 elided",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "val df = spark\n",
+    "  .read\n",
+    "  .load(\"../data/x.xgv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b5ace3",
+   "id": "72651a00",
    "metadata": {},
    "outputs": [],
    "source": []
