--- a/scala-sparo_예시.ipynb
+++ b/scala-sparo_예시.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca4baa12",
+   "id": "a5f56539",
    "metadata": {},
    "source": [
     "## 설치\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "810f55bd",
+   "id": "7d9e57da",
    "metadata": {},
    "outputs": [
     {
@@ -28,14 +28,77 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://192.168.1.151:4041\n",
-       "SparkContext available as 'sc' (version = 3.0.0, master = local[*], app id = local-1625897602458)\n",
+       "Spark Web UI available at http://DESKTOP-770U419:4040\n",
+       "SparkContext available as 'sc' (version = 3.0.0, master = local[*], app id = local-1626331216904)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
+    {
+     "data": {
+      "text/plain": [
+       "data: Int = 100\r\n"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val data =100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d8d81fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res0: Int = 200\r\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 + 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1ec61750",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res1: Int = 2\r\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bb6de0aa",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -54,11 +117,11 @@
     {
      "data": {
       "text/plain": [
-       "data: Seq[(Int, Int, Int)] = List((1,2,3), (4,5,6), (6,7,8), (9,19,10))\n",
-       "ds: org.apache.spark.sql.Dataset[(Int, Int, Int)] = [_1: int, _2: int ... 1 more field]\n"
+       "data: Seq[(Int, Int, Int)] = List((1,2,3), (4,5,6), (6,7,8), (9,19,10))\r\n",
+       "ds: org.apache.spark.sql.Dataset[(Int, Int, Int)] = [_1: int, _2: int ... 1 more field]\r\n"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "961b7944",
+   "execution_count": 5,
+   "id": "b91e1569",
    "metadata": {},
    "outputs": [
     {
@@ -91,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0d8719ce",
+   "execution_count": 6,
+   "id": "6f1e4fc3",
    "metadata": {},
    "outputs": [
     {
@@ -105,10 +168,10 @@
     {
      "data": {
       "text/plain": [
-       "x: Int = 2\n"
+       "x: Int = 2\r\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,31 +184,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "43d7edf4",
+   "execution_count": 7,
+   "id": "23505e3a",
    "metadata": {},
    "outputs": [
     {
      "ename": "org.apache.spark.sql.AnalysisException",
-     "evalue": " Path does not exist: file:/Users/dahlmoon/Documents/GitHub/data/x.xgv;",
+     "evalue": " Path does not exist: file:/C:/Users/dahlmoon/Documents/GitHub/data/x.xgv;\r",
      "output_type": "error",
      "traceback": [
-      "org.apache.spark.sql.AnalysisException: Path does not exist: file:/Users/dahlmoon/Documents/GitHub/data/x.xgv;",
-      "  at org.apache.spark.sql.execution.datasources.DataSource$.$anonfun$checkAndGlobPathIfNecessary$1(DataSource.scala:759)",
-      "  at scala.collection.TraversableLike.$anonfun$flatMap$1(TraversableLike.scala:245)",
-      "  at scala.collection.immutable.List.foreach(List.scala:392)",
-      "  at scala.collection.TraversableLike.flatMap(TraversableLike.scala:245)",
-      "  at scala.collection.TraversableLike.flatMap$(TraversableLike.scala:242)",
-      "  at scala.collection.immutable.List.flatMap(List.scala:355)",
-      "  at org.apache.spark.sql.execution.datasources.DataSource$.checkAndGlobPathIfNecessary(DataSource.scala:746)",
-      "  at org.apache.spark.sql.execution.datasources.DataSource.checkAndGlobPathIfNecessary(DataSource.scala:575)",
-      "  at org.apache.spark.sql.execution.datasources.DataSource.resolveRelation(DataSource.scala:398)",
-      "  at org.apache.spark.sql.DataFrameReader.loadV1Source(DataFrameReader.scala:279)",
-      "  at org.apache.spark.sql.DataFrameReader.$anonfun$load$2(DataFrameReader.scala:268)",
-      "  at scala.Option.getOrElse(Option.scala:189)",
-      "  at org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:268)",
-      "  at org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:214)",
-      "  ... 37 elided",
+      "org.apache.spark.sql.AnalysisException: Path does not exist: file:/C:/Users/dahlmoon/Documents/GitHub/data/x.xgv;\r",
+      "  at org.apache.spark.sql.execution.datasources.DataSource$.$anonfun$checkAndGlobPathIfNecessary$1(DataSource.scala:759)\r",
+      "  at scala.collection.TraversableLike.$anonfun$flatMap$1(TraversableLike.scala:245)\r",
+      "  at scala.collection.immutable.List.foreach(List.scala:392)\r",
+      "  at scala.collection.TraversableLike.flatMap(TraversableLike.scala:245)\r",
+      "  at scala.collection.TraversableLike.flatMap$(TraversableLike.scala:242)\r",
+      "  at scala.collection.immutable.List.flatMap(List.scala:355)\r",
+      "  at org.apache.spark.sql.execution.datasources.DataSource$.checkAndGlobPathIfNecessary(DataSource.scala:746)\r",
+      "  at org.apache.spark.sql.execution.datasources.DataSource.checkAndGlobPathIfNecessary(DataSource.scala:575)\r",
+      "  at org.apache.spark.sql.execution.datasources.DataSource.resolveRelation(DataSource.scala:398)\r",
+      "  at org.apache.spark.sql.DataFrameReader.loadV1Source(DataFrameReader.scala:279)\r",
+      "  at org.apache.spark.sql.DataFrameReader.$anonfun$load$2(DataFrameReader.scala:268)\r",
+      "  at scala.Option.getOrElse(Option.scala:189)\r",
+      "  at org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:268)\r",
+      "  at org.apache.spark.sql.DataFrameReader.load(DataFrameReader.scala:214)\r",
+      "  ... 37 elided\r",
       ""
      ]
     }
@@ -159,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72651a00",
+   "id": "fdea4e57",
    "metadata": {},
    "outputs": [],
    "source": []
